tests/paczka1/small_fuzzy/80756576.err
Error in line 2: hGpHQow6xF A598 7,4
Error in line 3: FMMM A911 69,5
